Fixed broken build by solving toList problem