@@ -106,7 +106,7 @@ public class TestIfMoveRules {
         new Move(newBoard, new Point(6, 1), new Point(5, 4)).movePiece();
         new Move(newBoard, new Point(6, 5), new Point(3, 6)).movePiece();
         assertEquals(60, Collections.max((MoveRules.candidatePathsForSkipMove(newBoard, Color.WHITE).values().stream()
-                .map(Path::getWeight).toList())));
+                .map(Path::getWeight).collect(Collectors.toList()))));
     }
 
     @Test
@@ -133,7 +133,8 @@ public class TestIfMoveRules {
         new Move(newBoard, new Point(6, 5), new Point(3, 6)).movePiece();
         new Move(newBoard, new Point(2, 5), new Point(3, 4)).movePiece();
         assertEquals(3, Collections.max(MoveRules.candidatePathsForSkipMove(newBoard, Color.WHITE).values().stream()
-                .map(Path::getNumberOfSkips).toList()));
+                .map(Path::getNumberOfSkips)
+                .collect(Collectors.toList())));
     }
 
     @Test
@@ -143,7 +144,8 @@ public class TestIfMoveRules {
         newBoard.getPieceAtTile(5, 4).upgradeToKing();
         assertEquals(2, MoveRules.candidatePathsForSkipMove(newBoard, Color.WHITE).size());
         assertEquals(10, Collections.max((MoveRules.candidatePathsForSkipMove(newBoard, Color.WHITE).values().stream()
-                .map(Path::getWeight).toList())));
+                .map(Path::getWeight)
+                .collect(Collectors.toList()))));
     }
 
     @Test
@@ -158,17 +160,20 @@ public class TestIfMoveRules {
                 .values();
 
         assertEquals(45, Collections.max((pathValues.stream().
-                map(Path::getWeight).toList())));
+                map(Path::getWeight)
+                .collect(Collectors.toList()))));
 
         assertEquals(board.getTile(2, 1),
                 pathValues.stream()
                         .filter(path -> path.getWeight() == 45)
-                        .map(Path::getSource).toList()
+                        .map(Path::getSource)
+                        .collect(Collectors.toList())
                         .get(0));
     }
 
     @Test
     void givesHigherScoreToPathWithFirstOccurrenceOfAKing() {
+        var board = new CustomizableBoard();
         var newBoard = new Board();
         newBoard.getPieceAtTile(2, 1).upgradeToKing();
         newBoard.getPieceAtTile(2, 3).upgradeToKing();
@@ -178,11 +183,20 @@ public class TestIfMoveRules {
         new Move(newBoard, new Point(5, 0), new Point(4, 1)).movePiece();
         newBoard.getPieceAtTile(3, 2).upgradeToKing();
         newBoard.getPieceAtTile(5, 4).upgradeToKing();
-        assertEquals(38, Collections.max((MoveRules.candidatePathsForSkipMove(newBoard, Color.WHITE).values().stream()
-                .map(Path::getWeight).toList())));
-        assertEquals(newBoard.getTile(2, 1), MoveRules.candidatePathsForSkipMove(newBoard, Color.WHITE).values().stream()
+
+        new OutInterfaceStdout().displayBoard(newBoard);
+        new OutInterfaceStdout().displayBoard(board);
+
+        var pathValues = MoveRules.candidatePathsForSkipMove(newBoard, Color.WHITE)
+                .values();
+
+        assertEquals(38, Collections.max((pathValues.stream()
+                .map(Path::getWeight)
+                .collect(Collectors.toList()))));
+        assertEquals(newBoard.getTile(2, 1), pathValues.stream()
                 .filter(path -> path.getWeight() == 38)
-                .map(Path::getSource).toList()
+                .map(Path::getSource)
+                .collect(Collectors.toList())
                 .get(0));
     }
 
